--- a/package.json
+++ b/package.json
@@ -12,7 +12,12 @@
   },
   "keywords": [
     "42",
-    "forty-two"
+    "forty-two",
+    "hitchhiker's",
+    "guide",
+    "to",
+    "the",
+    "galaxy"
   ],
   "author": "Alex Y. Liu <yuningalexliu@gmail.com> (http://yuningalexliu.github.io/)",
   "license": "MIT",
